Edit index.html and html files of recipes and add the css files

--- a/project-recipes/recipes/vegetable-biryani.html
+++ b/project-recipes/recipes/vegetable-biryani.html
@@ -4,86 +4,113 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe-Vegetable Biryani</title>
+    <link rel="stylesheet" href="myrecipes.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <style>
+      h1{
+        color: rgb(98, 130, 16);
+      }
+    </style>
   </head>
   <body>
-    <h1>Vegetable Biryani</h1>
 
-    <img
-      src="https://img.freepik.com/premium-photo/traditional-hyderabadi-vegetable-veg-dum-biryani-with-mixed-veggies-served-with-mixed-raita-selective-focus_726363-19.jpg?w=2000"
-      alt="Vegetable Biryani image" width="300" height="300"
-    />
+    <div class="content">
 
-    <h2>Description</h2>
+      <div ><h1>Vegetable Biryani</h1></div>
 
-    <p><strong>Preparation Time:</strong> 30 minutes</p>
-    <p><strong>Cook Time:</strong> 40 minutes</p>
-    <p><strong>Total Time:</strong> 1 hour 10 minutes</p>
-    <p><strong>Servings:</strong> 4</p>
+      <div class="image">
+        <img
+        src="https://img.freepik.com/premium-photo/traditional-hyderabadi-vegetable-veg-dum-biryani-with-mixed-veggies-served-with-mixed-raita-selective-focus_726363-19.jpg?w=2000"
+        alt="Vegetable Biryani image"
+        width="300"
+        height="300"/>
+      </div>
 
-    <h3>Ingredients</h3>
+      <div class="info">
+        
+        <div><h2>Description</h2></div>
 
-    <ul>
-      <li>2 cups basmati rice</li>
-      <li>2 onions, thinly sliced</li>
-      <li>1 cup mixed vegetables (carrots, peas, cauliflower, etc.)</li>
-      <li>1 cup yogurt</li>
-      <li>1/4 cup chopped cilantro (coriander)</li>
-      <li>1/4 cup chopped cilantro (coriander)</li>
-      <li>1/4 cup chopped mint leaves</li>
-      <li>2 tomatoes, chopped</li>
-      <li>1 tablespoon ginger-garlic paste</li>
-      <li>2 green chilies, slit</li>
-      <li>1 teaspoon red chili powder</li>
-      <li>1/2 teaspoon turmeric powder</li>
-      <li>1 teaspoon biryani masala</li>
-      <li>1 teaspoon cumin seeds</li>
-      <li>4 tablespoons ghee or oil</li>
-      <li>Salt to taste></li>
-      <li>Saffron strands soaked in warm milk (optional)</li>
-    </ul>
-
-    <h3>Preparation</h3>
-
-    <ol type="1">
-      <li>
-        Wash and soak basmati rice in water for 30 minutes. Drain and set aside.
-      </li>
-      <li>
-        Heat ghee or oil in a large pan. Add cumin seeds and let them splutter.
-      </li>
-      <li>Add sliced onions and sauté until golden brown.</li>
-      <li>Add ginger-garlic paste and green chilies. Sauté for a minute.</li>
-      <li>Add chopped tomatoes and cook until they turn soft.</li>
-      <li>
-        Add mixed vegetables, red chili powder, turmeric powder, and salt. Cook
-        for 5-7 minutes.
-      </li>
-      <li>
-        In a separate pot, bring water to boil. Add soaked rice and cook until
-        70% done. Drain and set aside.
-      </li>
-      <li>In a bowl, whisk yogurt and biryani masala together.</li>
-      <li>
-        Layer the vegetable mixture in a heavy-bottomed pot. Top with a layer of
-        cooked rice.
-      </li>
-      <li>Sprinkle chopped cilantro and mint leaves over the rice layer.</li>
-      <li>Drizzle the yogurt mixture evenly over the rice.</li>
-      <li>
-        Repeat the layers until all the rice and vegetable mixture are used up,
-        ending with a rice layer on top.
-      </li>
-      <li>If using, sprinkle saffron milk over the rice.</li>
-      <li>
-        Cover the pot tightly with a lid and cook on low heat for 20-25 minutes
-        until the rice is fully cooked and flavors are absorbed.
-      </li>
-      <li>
-        Serve hot with raita or salad. Enjoy your delicious Vegetable Dum
-        Biryani!
-      </li>
-    </ol>
+        <div>
+          <p><strong>Preparation Time:</strong> 30 minutes</p>
+          <p><strong>Cook Time:</strong> 40 minutes</p>
+          <p><strong>Total Time:</strong> 1 hour 10 minutes</p>
+          <p><strong>Servings:</strong> 4</p>
+        </div>
 
 
+        <div>
+          <h3>Ingredients</h3>
+
+          <ul>
+            <li>2 cups basmati rice</li>
+            <li>2 onions, thinly sliced</li>
+            <li>1 cup mixed vegetables (carrots, peas, cauliflower, etc.)</li>
+            <li>1 cup yogurt</li>
+            <li>1/4 cup chopped cilantro (coriander)</li>
+            <li>1/4 cup chopped cilantro (coriander)</li>
+            <li>1/4 cup chopped mint leaves</li>
+            <li>2 tomatoes, chopped</li>
+            <li>1 tablespoon ginger-garlic paste</li>
+            <li>2 green chilies, slit</li>
+            <li>1 teaspoon red chili powder</li>
+            <li>1/2 teaspoon turmeric powder</li>
+            <li>1 teaspoon biryani masala</li>
+            <li>1 teaspoon cumin seeds</li>
+            <li>4 tablespoons ghee or oil</li>
+            <li>Salt to taste></li>
+            <li>Saffron strands soaked in warm milk (optional)</li>
+          </ul>
+        </div>
+
+        <div>
+          <h3>Preparation</h3>
+
+          <ol type="1">
+            <li>
+              Wash and soak basmati rice in water for 30 minutes. Drain and set
+              aside.
+            </li>
+            <li>
+              Heat ghee or oil in a large pan. Add cumin seeds and let them
+              splutter.
+            </li>
+            <li>Add sliced onions and sauté until golden brown.</li>
+            <li>Add ginger-garlic paste and green chilies. Sauté for a minute.</li>
+            <li>Add chopped tomatoes and cook until they turn soft.</li>
+            <li>
+              Add mixed vegetables, red chili powder, turmeric powder, and salt.
+              Cook for 5-7 minutes.
+            </li>
+            <li>
+              In a separate pot, bring water to boil. Add soaked rice and cook until
+              70% done. Drain and set aside.
+            </li>
+            <li>In a bowl, whisk yogurt and biryani masala together.</li>
+            <li>
+              Layer the vegetable mixture in a heavy-bottomed pot. Top with a layer
+              of cooked rice.
+            </li>
+            <li>Sprinkle chopped cilantro and mint leaves over the rice layer.</li>
+            <li>Drizzle the yogurt mixture evenly over the rice.</li>
+            <li>
+              Repeat the layers until all the rice and vegetable mixture are used
+              up, ending with a rice layer on top.
+            </li>
+            <li>If using, sprinkle saffron milk over the rice.</li>
+            <li>
+              Cover the pot tightly with a lid and cook on low heat for 20-25
+              minutes until the rice is fully cooked and flavors are absorbed.
+            </li>
+            <li>
+              Serve hot with raita or salad. Enjoy your delicious Vegetable Dum
+              Biryani!
+            </li>
+          </ol>
+        </div>
+        
+      </div>
+    </div>
   </body>
 </html>
