--- a/project-recipes/recipes/gulab-jamun.html
+++ b/project-recipes/recipes/gulab-jamun.html
@@ -4,53 +4,100 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe-Gulab Jamun</title>
+    <link rel="stylesheet" href="myrecipes.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      h1{
+        color: rgb(158, 28, 28);
+      }
+    </style>
   </head>
   <body>
-    <h1>Gulab Jamun</h1>
+    <div class="content">
+      <div><h1>Gulab Jamun</h1></div>
 
-    <img
-      src="https://img.freepik.com/free-photo/delicious-indian-dessert-arrangement_23-2149312348.jpg?w=1060&t=st=1710500198~exp=1710500798~hmac=bb41e092ec3f357dbd1dc4668bcc4567d1d77882f1b7765a525c4e947d28ed83"
-      alt=" Gulab Jamun image" width="300" height="300"
-    />
+      <div class="image">
+        <img
+          src="https://img.freepik.com/free-photo/delicious-indian-dessert-arrangement_23-2149312348.jpg?w=1060&t=st=1710500198~exp=1710500798~hmac=bb41e092ec3f357dbd1dc4668bcc4567d1d77882f1b7765a525c4e947d28ed83"
+          alt=" Gulab Jamun image"
+          width="300"
+          height="300"
+        />
+      </div>
 
-    <h2>Description</h2>
+      <div class="info">
+        <div><h2>Description</h2></div>
 
-    <p><strong>Preparation Time:</strong> 15 minutes</p>
-    <p><strong>Cook Time:</strong> 30 minutes</p>
-    <p><strong>Total Time:</strong> 45 minutes</p>
-    <p><strong>Servings:</strong> 6</p>
+        <div>
+          <p><strong>Preparation Time:</strong> 15 minutes</p>
+          <p><strong>Cook Time:</strong> 30 minutes</p>
+          <p><strong>Total Time:</strong> 45 minutes</p>
+          <p><strong>Servings:</strong> 6</p>
+        </div>
 
+        <div>
+          <h2>Ingredients</h2>
 
-    <h2>Ingredients</h2>
+          <ul>
+            <li>1 cup milk powder</li>
+            <li>2 tablespoons all-purpose flour</li>
+            <li>1/4 teaspoon baking soda</li>
+            <li>2 tablespoons ghee (clarified butter)</li>
+            <li>1/4 cup milk (approximately)</li>
+            <li>Oil or ghee for deep frying</li>
+            <li>1 cup sugar</li>
+            <li>1 cup water</li>
+            <li>1/4 teaspoon cardamom powder</li>
+            <li>Chopped nuts for garnishing (optional)</li>
+          </ul>
+        </div>
 
-    <ul>
-        <li>1 cup milk powder</li>
-        <li>2 tablespoons all-purpose flour</li>
-        <li>1/4 teaspoon baking soda</li>
-        <li>2 tablespoons ghee (clarified butter)</li>
-        <li>1/4 cup milk (approximately)</li>
-        <li>Oil or ghee for deep frying</li>
-        <li>1 cup sugar</li>
-        <li>1 cup water</li>
-        <li>1/4 teaspoon cardamom powder</li>
-        <li>Chopped nuts for garnishing (optional)</li>
-    </ul>
+        <div>
+          <h2>Preparation</h2>
 
-    <h2>Preparation</h2>
-
-    <ol>
-        <li>In a mixing bowl, combine milk powder, all-purpose flour, baking soda, and ghee.</li>
-        <li>Add milk gradually and knead the mixture into a soft dough.</li>
-        <li>Divide the dough into small equal-sized portions and roll them into smooth balls without any cracks.</li>
-        <li>Heat oil or ghee in a deep frying pan over medium heat.</li>
-        <li>Gently slide the prepared dough balls into the hot oil and fry until they turn golden brown.</li>
-        <li>Meanwhile, in another pan, prepare the sugar syrup by boiling sugar and water together until it reaches a one-string consistency.</li>
-        <li>Add cardamom powder to the sugar syrup and turn off the heat.</li>
-        <li>Remove the fried dough balls from oil and immediately dip them into the warm sugar syrup.</li>
-        <li>Let the Gulab Jamuns soak in the syrup for at least 30 minutes before serving.</li>
-        <li>Garnish with chopped nuts if desired and serve warm or at room temperature.</li>
-    </ol>
-
-
+          <ol>
+            <li>
+              In a mixing bowl, combine milk powder, all-purpose flour, baking
+              soda, and ghee.
+            </li>
+            <li>Add milk gradually and knead the mixture into a soft dough.</li>
+            <li>
+              Divide the dough into small equal-sized portions and roll them
+              into smooth balls without any cracks.
+            </li>
+            <li>Heat oil or ghee in a deep frying pan over medium heat.</li>
+            <li>
+              Gently slide the prepared dough balls into the hot oil and fry
+              until they turn golden brown.
+            </li>
+            <li>
+              Meanwhile, in another pan, prepare the sugar syrup by boiling
+              sugar and water together until it reaches a one-string
+              consistency.
+            </li>
+            <li>
+              Add cardamom powder to the sugar syrup and turn off the heat.
+            </li>
+            <li>
+              Remove the fried dough balls from oil and immediately dip them
+              into the warm sugar syrup.
+            </li>
+            <li>
+              Let the Gulab Jamuns soak in the syrup for at least 30 minutes
+              before serving.
+            </li>
+            <li>
+              Garnish with chopped nuts if desired and serve warm or at room
+              temperature.
+            </li>
+          </ol>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
