Update index.html and style.css by adding hero image with text to landing page

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -17,6 +17,25 @@
       </ul>
     </div>
 
+    <div class="content">
+      <div class="hero">
+        <img
+          src="images/hero.jpg"
+          alt="creative skills image"
+          width="100%"
+          height="auto"
+        />
+        <div class="container">
+          <div class="title">Unlock Your Creativity:</div>
+          <p>
+            Explore a world of endless possibilities in <br />art, design, and
+            innovation with our online <br/>learning platform for creative
+            skills.
+          </p>
+          <button id="start">Get Started</button>
+        </div>
+      </div>
+
     
   </body>
 </html>
