Update index.html and style.css by adding courses section to landing page

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="content">
-      <div class="hero">
+      <div id="about" class="hero">
         <img
           src="images/hero.jpg"
           alt="creative skills image"
@@ -35,6 +35,42 @@
           <button id="start">Get Started</button>
         </div>
       </div>
+
+      <div id="explore" class="courses">
+        <div class="heading">Explore our courses</div>
+        <div class="cards">
+          <div class="card">
+            <img src="images/drawing.jpg" alt="a boy drawing" />
+            <p>Learn how to draw: <br />from basics to advanced</p>
+          </div>
+
+          <div class="card">
+            <img src="images/music.jpg" alt="a person playing guitar" />
+            <p>Get ready to rock with <br />your Guitar</p>
+          </div>
+
+          <div class="card">
+            <img
+              src="images/photography.jpg"
+              alt="a woman taking a photo with a camera"
+            />
+            <p>
+              Everything about Photography: <br />learn the art of storytelling
+              <br />and more
+            </p>
+          </div>
+
+          <div class="card">
+            <img
+              src="images/animation.jpg"
+              alt="a woman taking a photo with a camera"
+            />
+            <p>A Beginner's guide to Animation</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
 
     
   </body>
