Update index.html and style.css by adding testimonials section to landing page

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -70,6 +70,52 @@
         </div>
       </div>
 
+      <div id="feedback" class="testimonials">
+        <div class="heading">See why our students love Kreativ</div>
+        <div class="students">
+          <div class="student">
+            <p>
+              " The drawing courses on this platform have been a game-changer for
+              me. The instructors not only teach techniques but also inspire
+              creativity and experimentation. I've seen a significant improvement
+              in my artwork and confidence. "
+            </p>
+            <p class="name">-Kreativ drawing student</p>
+          </div>
+          
+          <div class="student">
+            <p>
+              " I never knew learning music could be this fun and rewarding! The
+              trainers here have a unique way of breaking down complex concepts
+              and making them easy to understand. I've grown so much as a
+              musician, thanks to this platform. "
+            </p>
+            <p class="name">-Kreativ music student</p>
+          </div>
+
+          <div class="student">
+            <p>
+              " As an aspiring photographer, I couldn't have asked for a better
+              learning experience. The photography courses cover everything from
+              basics to advanced techniques, and the feedback from instructors has
+              been invaluable. I'm amazed at how much I've learned and grown in
+              such a short time. "
+            </p>
+            <p class="name">-Kreativ photographer student</p>
+  
+          </div>
+
+          <div class="student">
+            <p>
+              " Learning animation here has been an incredible journey. The
+              instructors are passionate and knowledgeable, guiding us through the
+              intricacies of animation with patience and expertise. I've created
+              animations I never thought possible, all thanks to this platform. "
+            </p>
+            <p class="name">-Kreativ animation student</p>
+          </div>
+        </div>
+      </div>
     </div>
 
     
