--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -116,8 +116,15 @@
           </div>
         </div>
       </div>
+
+      <div class="action">
+        <div class="action-box">
+          <div class="text"><span style="font-size: 20px;">What are you waiting for?</span><br>Let's create, innovate, and inspire together at Kreativ!!</div>
+          <button class="sign-up">Sign up</button>
+        </div>
+      </div>
+
     </div>
 
-    
   </body>
 </html>
