Update index.html and style.css by adding footer section to landing page

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -126,5 +126,9 @@
 
     </div>
 
+    <div class="footer">
+      <div class="copyright">Copyright &copy; Kreativ 2024</div>
+    </div>
+
   </body>
 </html>
