add all the functionalities

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -7,8 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class="flex flex-col justify-center items-center gap-5">
-      <div class="px-5 my-5 text-center">
+    <div class="flex flex-col justify-center items-center gap-4 h-screen">
+      <div class="px-5 my-2 text-center">
         <h1 class="text-4xl font-medium mb-2">Welcome to
           <span class="text-blue-600">Rock</span>
           <span class="text-green-600">Paper</span>
@@ -20,7 +20,7 @@
       <button class="start-btn bg-red-600 px-4 py-2 text-white rounded-xl ">Start the game</button>
       <div class="selection-container flex-col px-10 justify-center items-center hidden">
         <h2 class="text-lg mb-1">Click on one of three selections below in each round</h2>
-        <p class="mb-10">The player who scores <span class="text-lg font-medium">5 points</span> first, wins the game</p>
+        <p class="mb-5">The player who scores <span class="text-lg font-medium">5 points</span> first, wins the game</p>
         <div class="flex gap-10 mb-6">
           <p class="text-red-500 font-medium ">Computer Score: <span class="comp-score text-black"></span></p>
           <p class="text-blue-500 font-medium ">Your Score: <span class="player-score text-black"></span></p>
