add delete button

--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -30,6 +30,9 @@
       <button class="clear bg-blue-500 text-white px-4 py-1 rounded-lg">
         Clear
       </button>
+      <button class="delete bg-pink-500 text-white px-4 py-1 rounded-lg">
+        Delete
+      </button>
       <label class="switch" title="pixel borders on/off">
         <input name="grids on/off" type="checkbox" id="check" checked/>
         <span class="slider round" ></span>
